qlik-core/engine-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: engine
  labels:
    app: engine
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: engine
        qix-engine: ""
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - engine
            topologyKey: "kubernetes.io/hostname"
      terminationGracePeriodSeconds: 600
      containers:
      - name: engine
        image: "qlikcore/engine:12.160.0"
        args: [
          "-S", "AcceptEULA=no", # change to 'yes' if you accept the Qlik Core EULA
          "-S", "LicenseServiceUrl=http://license-service:9200",
          "-S", "DocumentDirectory=/doc"
        ]
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9076
        - containerPort: 9090
        volumeMounts:
          - mountPath: /doc
            name: app-nfs
          - name: engine-prestop-hook
            mountPath: /engine-prestop-hook
        lifecycle:
          preStop:
            exec:
              command: ["sh", "-c", "/engine-prestop-hook/engine-prestop-hook.sh"]
      volumes:
        - name: engine-prestop-hook
          configMap:
            name: engine-prestop-hook
            defaultMode: 0755
        - name: app-nfs
          persistentVolumeClaim:
            claimName: nfs
      imagePullSecrets:
      - name: dockerhub
