qlik-core/license-service-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: license-service
  labels:
    app: license-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: license-service
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: license-service
        image: "qlikcore/licenses:1.4.4"
        resources:
            requests:
              memory: "16Mi"
            limits:
              memory: "16Mi"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9200
      imagePullSecrets:
      - name: dockerhub
