qlik-core/qix-session-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qix-session
  labels:
    app: qix-session
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qix-session
  template:
    metadata:
      labels:
        app: qix-session
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: '/v1/metrics'
    spec:
      containers:
      - name: qix-session
        resources:
            requests:
              memory: "100Mi"
            limits:
              memory: "100Mi"
        image: "qlikcore/qix-session-placement-service:0.0.1-288"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9455
      imagePullSecrets:
      - name: dockerhub
