qlik-core/engine-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: engine
  labels:
    app: engine
spec:
  type: ClusterIP
  ports:
    - port: 9076
      protocol: TCP
      name: qix
    - port: 9090
      protocol: TCP
      name: prometheus
  selector:
    app: engine
