qlik-core/license-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: license-service
  labels:
    app: license-service
spec:
  type: ClusterIP
  ports:
    - port: 9200
      targetPort: 9200
      protocol: TCP
      name: http
  selector:
    app: license-service
