qlik-core/mira-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mira
  labels:
    app: mira
spec:
  type: ClusterIP
  ports:
    - port: 9100
      targetPort: 9100
      protocol: TCP
      name: http
  selector:
    app: mira
