qlik-core/qix-session-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qix-session
  labels:
    app: qix-session
spec:
  type: NodePort
  ports:
    - port: 9455
      targetPort: 9455
      protocol: TCP
      name: http
  selector:
    app: qix-session
