qlik-core/mira-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mira-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /mira/
        backend:
          serviceName: mira
          servicePort: 9100
